# libraryMicroservicesG4

./: .env.sample  .gitignore  README.md  app.py  connectors.py  custom_logging.py  custom_scalars.py  docker-compase.yml  docker-compose.yml  requirements.txt  uvicorn_disable_logging.json
.github/workflows/: books-service-docker-build.yml  books-service-tests.yml  customers-service-docker-build.yml  customers-service-tests.yml  graphql-service-docker-build.yml  lends-service-docker-build.yml  lends-service-tests.yml
books/: .env.sample  Dockerfile  fake-db.js  index.js  index.test.js  package-lock.json  package.json
books/database/: db.js  fake-db.js  fake-mongo-connection.js  mongo-connection.js  real-db.js
books/logger/: logger.js
customers/: Dockerfile  docker-compose.yml  pom.xml
graphql-gateway/: .env.sample  Dockerfile  app.py  connectors.py  graphql_connectors.py  graphql_logic.py  graphql_scalars.py  pyproject.toml  schema.graphql
img/: Library.xml  Thumbs.db
kubernetes-config/: books-ms-deployment.yaml  books-ms-service.yaml  customers-ms-deployment.yaml  customers-ms-service.yaml  graphql-gateway-ms-deployment.yaml  graphql-gateway-ms-service.yaml  lends-ms-deployment.yaml  lends-ms-service.yaml  mongo-db-deployment.yaml  mongo-db-service.yaml  mysql-db-deployment.yaml  mysql-db-service.yaml
lend/: .env.sample  Dockerfile  fakeData.js  index.js  index.test.js  package-lock.json  package.json
lend/database/: db.js  fake-db.js  fake-sql-connection.js  sql-connection.js
lend/database/models/: lend.js
notification/Kafka/: docker-composefile.yml
(+13 files in other folders)
